--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="top-container">
         
-        <h1>I'm koala pitt</h1>
+        <h1>I'm koala pumpkin</h1>
         <h2>I'm a professional sleeper.</h2>
         <img src="images/leaf.png" alt="leaf" id="coala">
         <img src="images/forest.png" alt="forest" id="forest">
@@ -40,7 +40,7 @@
           <h2>Get In Touch</h2>
           <h3>If you wanna know more things about me.</h3>
           <p class="stuff">Interested about my habbit and my favorite stuff? Just click the following websites.</p>
-          <a class="btn" href="mailto:koalapitt@email.com">Click ME</a>
+          <a class="btn" href="mailto:koalapumpkin@email.com">Click ME</a>
         </div>
       </div>
       
@@ -49,7 +49,7 @@
         <a class="footer-link" href="https://en.wikipedia.org/wiki/Koala">Wikipedia</a>
         <a class="footer-link" href="https://environment.des.qld.gov.au/wildlife/animals/living-with/koalas/facts">Environment</a>
         <a class="footer-link" href="https://www.nationalgeographic.com/animals/mammals/facts/koala">Website</a>
-        <p style="color: aliceblue;" class="copyright">© pitt Koala.</p>
+        <p style="color: aliceblue;" class="copyright">© pumpkin Koala.</p>
       </div>
       </div>
 </body>
